--- a/.github/workflows/build-php.yaml
+++ b/.github/workflows/build-php.yaml
@@ -62,11 +62,11 @@ jobs:
         if: ${{ matrix.build-php-cli }}
         with:
           name: php-${{ matrix.version }}${{ matrix.suffix }}.wasm
-          path: php/build-output/php/php-${{ matrix.version }}/bin/php-${{ matrix.version }}${{ matrix.suffix }}.wasm
+          path: php/build-output/php/php-${{ matrix.version }}${{ matrix.suffix }}/bin/php-${{ matrix.version }}${{ matrix.suffix }}.wasm
           if-no-files-found: error
       - name: Upload php-cgi-${{ matrix.version }}${{ matrix.suffix }}.wasm artifact
         uses: actions/upload-artifact@v3
         with:
           name: php-cgi-${{ matrix.version }}${{ matrix.suffix }}.wasm
-          path: php/build-output/php/php-${{ matrix.version }}/bin/php-cgi-${{ matrix.version }}${{ matrix.suffix }}.wasm
+          path: php/build-output/php/php-${{ matrix.version }}${{ matrix.suffix }}/bin/php-cgi-${{ matrix.version }}${{ matrix.suffix }}.wasm
           if-no-files-found: error
