--- a/Dockerfile.wasi-builder
+++ b/Dockerfile.wasi-builder
@@ -1,5 +1,4 @@
-ARG WASM_BASE
-FROM ghcr.io/vmware-labs/wasmlabs/wasm-base:${WASM_BASE}
+FROM ghcr.io/vmware-labs/wasmlabs/wasm-base:latest
 ARG WASI_SDK_VERSION
 ARG WABT_VERSION=1.0.32
 ENV WASI_SDK=wasi-sdk-${WASI_SDK_VERSION}
@@ -24,5 +23,7 @@ RUN wget https://github.com/WebAssembly/wabt/releases/download/${WABT_VERSION}/$
       mkdir ${WABT_ROOT} && \
       tar xf ${WABT}-ubuntu.tar.gz --strip-components=1 -C ${WABT_ROOT} && \
       rm ${WABT}-ubuntu.tar.gz
-ADD . /wlr
+RUN mkdir /wlr
+# We will be mounting the source repo in /wlr, which is owned by a user different from root.
+RUN git config --global --add safe.directory /wlr
 WORKDIR /wlr
