--- a/Dockerfile.wasm-base
+++ b/Dockerfile.wasm-base
@@ -8,9 +8,9 @@ RUN apt update && \
     tar -xf binaryen-version_${BINARYEN_VERSION}-x86_64-linux.tar.gz --strip-components=1 -C /opt && \
     rm binaryen-version_${BINARYEN_VERSION}-x86_64-linux.tar.gz && \
     mkdir -p /opt/priority-bin
-# wasm-opt is called in unexpected contexts
-# (https://github.com/llvm/llvm-project/issues/55781). To avoid this,
-# we install a `wasm-opt` wrapper with a higher priority in the PATH
-# that can disable wasm-opt execution when desired.
-ADD scripts/wrappers/wasm-opt /opt/priority-bin/
+
+# We may need to intercept the execution of some tools.
+# So, for convenience, one may use the /opt/priority-bin to do that.
+RUN mkdir -p /opt/priority-bin
+
 ENV PATH="/opt/priority-bin:$PATH:/opt/bin"
