chore: only run actions on the main branch
Given other branches than main will need a PR to merge into main, we
will run CI workflows on the PR itself, that contains a trigger of its
own.

--- a/.github/workflows/build-php.yaml
+++ b/.github/workflows/build-php.yaml
@@ -5,7 +5,7 @@ on:
     # running on tag push. We have a dedicated workflow to be ran when
     # a tag is pushed.
     branches:
-      - "*"
+      - main
   pull_request:
 jobs:
   build-php:
